[package]
name = "ccmeter"
version = "1.1.0"
edition = "2024"
description = "A meter for Claude Code usage"
repository = "https://github.com/hmenzagh/CCMeter"
license = "MIT"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
crossterm = "0.29.0"
ratatui = "0.30.0"
rayon = "1.11.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.149"
dirs = "6"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
